maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:17: error: not found: value dir
    dir=dir+1
    ^PledgeMaze:21: error: not found: value dir
    dir=dir+1
    ^PledgeMaze:25: error: not found: value dir
    dir=dir+1
    ^PledgeMaze:29: error: not found: value dir
  dir=dir-1
  ^PledgeMaze:30: error: not found: value dir
  return dir
         ^