maze.pledge.PledgeMaze.scala.code
override def run() {
  var dir = 0
  while(!estSurBiscuit){
    while(!estFaceMur){
      avance()
    }
  }
  	do(
      keepHandOnSideWall()
  	)while(dir!=0 || isDirectionFree(Direction.NORTH)==true)
}

def keepHandOnSideWall():Int={ 
 	if(estFaceMur()){
    gauche()
    dir=dir+1
  }  
  if(estFaceMur()){
    gauche()
    dir=dir+1
  }
  if(estFaceMur()){
    gauche()
    dir=dir+1
  }
  avance()
  droite()
  dir=dir-1
  return dir
}

def isDirectionFree(dir:Direction): Boolean ={
  while(getDirection!=dir){
    droite()
  }
  if(estFaceMur){
    return false
  }
  else{
    return true
  }
}